--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react-swc": "^3.0.0",
+    "standart": "^6.1.0",
     "vite": "^4.2.0"
+  },
+  "eslintConfig": {
+    "extends": "/node_modules/standart/eslintrc.json"
   }
 }
